k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: us.gcr.io/ticket-app-443308/client
          # ports:
          #  - containerPort: 3000   
          # imagePullPolicy: Always
          # env:
          #   - name: JWT_SECRET
          #     valueFrom: 
          #       secretKeyRef:
          #         name: jwt-secret
          #         key: JWT_SECRET
---
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
