k8s/ingress-srv.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticket.com
      http:
        paths:
        - pathType: ImplementationSpecific
          path: /api/users/?(.*)
          backend:
            service:
              name: auth-srv
              port: 
                number: 3000
